--- a/IGUANAS web/assets/css/style.css
+++ b/IGUANAS web/assets/css/style.css
@@ -1,9 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap');
 body {
     background-color: #000000;
+    height: 1946px;
+}
+
+@font-face {
+    font-family: "Raleway";
+    src: url("Raleway");
 }
 
 h1 {
+    margin-top: 0.5em;
+    font-family: "Raleway", sans-serif;
+    font-weight: 500;
+    font-size: 50px;
     text-align: center;
     color: #FFFFFF;
-    opacity: 1;
+}
+
+p {
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: #FFFFFF;
+    text-align: left;
+    padding-right: 42em;
+    padding-left: 8em;
+    padding-top: 6em;
+    padding-bottom: 4em;
+}
+
+#a {
+    width: 100%;
+    height: auto;
+}
+
+#b {
+    width: 30%;
+    height: auto;
+    margin-right: 8em;
+    float: right;
+    padding-top: 4em;
+    padding-bottom: 4em;
+}
+
+h2 {
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    color: #FFFFFF;
+    padding-top: 40px;
+    padding-bottom: 60px;
+}
+
+footer {
+    margin-bottom: 0%;
+    align-self: start;
+    height: 102px;
+    width: 100%;
+    background-color: #1E1A13;
+    opacity: 0.98;
 }
