--- a/IGUANAS web/assets/css/style.css
+++ b/IGUANAS web/assets/css/style.css
@@ -52,15 +52,61 @@ h2 {
     color: #FFFFFF;
 }
 
+li {
+    text-align: justify;
+    padding-top: 2em;
+}
+
+.eye {
+    padding-left: 6em;
+}
+
+.peace {
+    margin-right: 10em;
+    margin-left: 10em;
+}
+
+.brush {
+    margin-right: 6em;
+}
+
 nav {
-    padding-top: 2.5em;
+    margin-top: 3em;
+    padding-top: 3em;
     text-align-last: center;
-    margin-top: 4em;
-    margin-bottom: 5em;
     height: 346px;
     width: 100%;
     background-color: #1E1A13;
     opacity: 0.98;
+}
+
+section {
+    margin-inline-start: 6em;
+}
+
+#c {
+    width: auto;
+    height: 12em;
+    padding-top: 3em;
+    padding-bottom: 1.5em;
+    padding-left: 5em;
+}
+
+#d {
+    width: auto;
+    height: 12em;
+    padding-top: 3em;
+    padding-bottom: 1.5em;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+#e {
+    width: auto;
+    height: 12em;
+    padding-top: 3em;
+    padding-bottom: 1.5em;
+    padding-right: 5em;
 }
 
 h3 {
