--- a/IGUANAS web/assets/css/style.css
+++ b/IGUANAS web/assets/css/style.css
@@ -46,57 +46,83 @@ p {
 }
 
 h2 {
+    text-align: center;
     font-family: "Raleway", sans-serif;
     font-weight: 500;
     font-size: 40px;
     color: #FFFFFF;
 }
 
-li {
-    text-align: justify;
-    padding-top: 2em;
-}
-
-.eye {
-    padding-left: 6em;
-}
-
-.peace {
-    margin-right: 10em;
-    margin-left: 10em;
-}
-
-.brush {
-    margin-right: 6em;
-}
-
 nav {
+    text-align: center;
     margin-top: 3em;
     padding-top: 3em;
-    text-align-last: center;
     height: 346px;
     width: 100%;
     background-color: #1E1A13;
     opacity: 0.98;
 }
 
+li {
+    padding-top: 2em;
+}
+
+.eye {
+    padding-left: 4em;
+}
+
+.peace {
+    margin-right: 6em;
+    margin-left: 6em;
+}
+
+.brush {
+    padding-right: 4em;
+}
+
+div {
+    text-align: center;
+    width: 26em;
+    float: inline-start;
+}
+
+#eye {
+    font-size: 25px;
+    padding-left: 44%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+}
+
+#peace {
+    font-size: 25px;
+    padding-left: 40%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+}
+
+#brush {
+    font-size: 25px;
+    padding-left: 20%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+}
+
 section {
-    margin-inline-start: 6em;
+    text-align: center;
 }
 
 #c {
     width: auto;
     height: 12em;
     padding-top: 3em;
-    padding-bottom: 1.5em;
-    padding-left: 5em;
+    padding-bottom: 2em;
 }
 
 #d {
     width: auto;
     height: 12em;
     padding-top: 3em;
-    padding-bottom: 1.5em;
+    padding-bottom: 2em;
     padding-left: 1em;
     padding-right: 1em;
 }
@@ -105,8 +131,7 @@ section {
     width: auto;
     height: 12em;
     padding-top: 3em;
-    padding-bottom: 1.5em;
-    padding-right: 5em;
+    padding-bottom: 2em;
 }
 
 h3 {
